# mortgage-rate-comparison

./: README.md  eda.ipynb  mortgage_rate_comparison_api.py  pyproject.toml  test_mortgage_rate_comparison_api.py
src/: mortgage_rate_comparison_api.py
tests/: test_mortgage_rate_comparison_api.py
